<resources>
    <string name="app_name">GitHub API v3</string>
    <string name="no_internet_connection">No Internet Connection. Please make sure that your device is connected to internet.</string>
    <string name="https_www_github_com">https://www.github.com</string>
    <string name="username">Username</string>
    <string name="search_hint">Search for a GitHub username</string>
    <string name="search_something">Search Something</string>
    <string name="search_for_your_favourite_github_developer">Search for your favourite GitHub developer</string>
    <string name="searchimage">searchImage</string>
    <string name="location">Location:</string>
    <string name="following">Following:</string>
    <string name="followers">Followers:</string>
    <string name="repositories">Public Repositories:</string>
    <string name="company">Company:</string>
    <string name="github_profile">GitHub Profile </string>
    <string name="linus_torvalds">Linus Torvalds</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="see_user_followers">See User Followers</string>
    <string name="_11280">11280</string>
</resources>
