<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:context=".controller.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            tools:context=".controller.DetailsActivity">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_profile"
                android:textSize="@dimen/_18ssp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_4sdp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:background="#083D5A"
                android:drawableStart="@drawable/web_icon"
                android:padding="@dimen/_10sdp"
                android:onClick="goToGitHubProfile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/nameContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:text="@string/name"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/name"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textSize="@dimen/_15ssp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/text_view_background"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/emailContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/email"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textSize="@dimen/_15ssp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/text_view_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/companyContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/https_www_github_com"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/text_view_background"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/reposContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/https_www_github_com"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/text_view_background"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/followersContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:text="@string/_11280"
                        android:layout_gravity="start"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:textSize="@dimen/_15ssp"
                        android:background="@drawable/text_view_background"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_user_followers"
                        android:textColor="@color/seeUserFollowersColor"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:onClick="seeUserFollowersList"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/followingContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/https_www_github_com"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/text_view_background"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/locationContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:text="@string/https_www_github_com"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/text_view_background"
                    android:layout_marginBottom="@dimen/_20sdp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
